Fixed positioning bug on Firefox

--- a/scss/partials/page-sections/_cookies.scss
+++ b/scss/partials/page-sections/_cookies.scss
@@ -25,8 +25,7 @@
     position: absolute;
     left    : 0;
     right   : 0;
-    top     : 0;
-    bottom  : 0;
+    top     : 20%;
   }
 
   &-title,
